--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div>
 				<label class="block text-gray-700 font-bold mb-2" for="output">Resultado:</label>
 				<textarea id="output" class="w-full p-2 border rounded-lg focus:outline-none focus:shadow-outline" rows="10" readonly></textarea>
-				<a id="downloadLink" style="display:none" download="PNEZD Coordenadas.txt" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+				<a id="downloadLink" style="display:none" download="PNEZD Cooordenadas.txt" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
 					Download
 				</a>
 			</div>
