--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Conversor de coordenadas</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css">
 </head>
 <body class="bg-gray-100">
 
-	<div class="container mx-auto py-10">
+	<div class="container mx-auto py-10 px-4">
 		<div class="max-w-lg mx-auto bg-white p-5 rounded-lg shadow-lg">
 			<h1 class="text-2xl text-center mb-5">Conversor de Coordenadas</h1>
 			<div class="mb-4">
@@ -15,14 +16,14 @@
 				<textarea id="input" class="w-full p-2 border rounded-lg focus:outline-none focus:shadow-outline" rows="10"></textarea>
 			</div>
 			<div class="mb-4">
-				<button onclick="convert()" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+				<button onclick="convert()" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">
 					Converter
 				</button>
 			</div>
 			<div>
 				<label class="block text-gray-700 font-bold mb-2" for="output">Resultado:</label>
 				<textarea id="output" class="w-full p-2 border rounded-lg focus:outline-none focus:shadow-outline" rows="10" readonly></textarea>
-				<a id="downloadLink" style="display:none" download="PNEZD Coordenadas.txt" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+				<a id="downloadLink" style="display:none; download: PNEZD Coordenadas.txt; display: flex; justify-content: center" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">
 					Download
 				</a>
 			</div>
